--- a/app/src/main/res/layout/item_notification.xml
+++ b/app/src/main/res/layout/item_notification.xml
@@ -62,12 +62,14 @@
             tools:text="길동님이 인사이트 교환을 수락했어요.\n교환한 인사이트를 보관함에서 확인해보세요." />
 
         <TextView
+            android:id="@+id/tv_notification_action_button"
             style="@style/T_600_14_19_6"
             android:layout_width="wrap_content"
             android:layout_height="42dp"
             android:layout_marginTop="12dp"
             android:background="@drawable/sr_white_gray100_all8"
             android:gravity="center"
+            android:minWidth="100dp"
             android:onClick="@{() -> viewModel.onClickActionButton(item.notification.category)}"
             android:paddingHorizontal="12dp"
             android:text="@{item.notification.category.actionMessage}"
@@ -75,5 +77,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_notification_message"
             tools:text="보관함 확인하기" />
+
+        <TextView
+            style="@style/T_600_14_19_6"
+            bindVisible="@{item.notification.category.actionMessage2 != null}"
+            android:layout_width="wrap_content"
+            android:layout_height="42dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/sr_white_gray100_all8"
+            android:gravity="center"
+            android:minWidth="100dp"
+            android:onClick="@{() -> viewModel.onClickAction2Button(item.notification.category)}"
+            android:paddingHorizontal="12dp"
+            android:text="@{item.notification.category.actionMessage2}"
+            android:textColor="@color/gray_700"
+            app:layout_constraintStart_toEndOf="@id/tv_notification_action_button"
+            app:layout_constraintTop_toBottomOf="@id/tv_notification_message"
+            tools:text="수락하기" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
