feat: 오늘 새롭게 올라온 인사이트 없을 때 목록 안보이도록 수정

--- a/app/src/main/res/layout/fragment_home_search.xml
+++ b/app/src/main/res/layout/fragment_home_search.xml
@@ -223,6 +223,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/cl_home_new_insight"
+                    bindVisible="@{viewModel.newInsights.size() > 0}"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingVertical="32dp"
@@ -272,6 +273,7 @@
 
                 <View
                     android:id="@+id/view_divider_2"
+                    bindVisible="@{viewModel.newInsights.size() > 0}"
                     android:layout_width="match_parent"
                     android:layout_height="8dp"
                     android:background="@color/gray_50"
